After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783001 - coverity: 'compressed_len' and 'i' are set to values that are never used
coverity: 'compressed_len' and 'i' are set to values that are never used
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: VTE Maintainers
VTE Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-23 15:07 UTC by Debarshi Ray
Modified: 2017-05-24 14:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't set variables to values that are never used (1.84 KB, patch)
2017-05-23 15:14 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2017-05-23 15:07:53 UTC
Coverity revealed a few niggles are that are easily fixed.
Comment 1 Debarshi Ray 2017-05-23 15:14:10 UTC
Created attachment 352432 [details] [review]
Don't set variables to values that are never used
Comment 2 Egmont Koblinger 2017-05-23 20:54:45 UTC
Looks good, thanks!
Comment 3 Debarshi Ray 2017-05-24 14:45:36 UTC
Comment on attachment 352432 [details] [review]
Don't set variables to values that are never used

Thanks for taking a look.