Don't set variables to values that are never used

https://bugzilla.gnome.org/show_bug.cgi?id=783001